syntax = "proto3";
package audit.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/andrlikjirka/dp-teals/proto/audit/v1;auditv1";

service ProofService {
  rpc GetInclusionProof (GetInclusionProofRequest) returns (GetInclusionProofResponse) {}
  rpc GetConsistencyProof (GetConsistencyProofRequest) returns (GetConsistencyProofResponse) {}
  rpc GetLatestSignedCheckpoint (GetLatestSignedCheckpointRequest) returns (GetLatestSignedCheckpointResponse) {}
  rpc GetServerPublicKey  (GetServerPublicKeyRequest)  returns (GetServerPublicKeyResponse)  {}
}

message InclusionProof {
  repeated bytes siblings   = 4;
  repeated bool  left       = 5;
}

message GetInclusionProofRequest {
  string event_id = 1 [(buf.validate.field).string.uuid = true];
  int64  ledger_size = 2 [(buf.validate.field).int64.gte = 0];
}

message GetInclusionProofResponse {
  string         event_id     = 1;   
  int64          leaf_index   = 2;
  int64          ledger_size  = 3;
  bytes          leaf_hash    = 4;
  bytes          root_hash    = 5;
  InclusionProof proof        = 6;
}

message GetConsistencyProofRequest {
  int64 from_size = 1 [(buf.validate.field).int64.gte = 0];
  int64 to_size   = 2 [(buf.validate.field).int64.gte = 0];
}

message GetConsistencyProofResponse {
  ConsistencyProof proof = 1;
}

message ConsistencyPath {
  repeated bytes siblings = 1;
  repeated bool left = 2;
}

message ConsistencyProof {
  int64 old_size = 1;
  int64 new_size = 2;
  repeated bytes old_peaks_hashes = 3;
  repeated ConsistencyPath consistency_paths = 4;
  repeated bytes right_peaks = 5;
}

message GetLatestSignedCheckpointRequest {}

message GetLatestSignedCheckpointResponse {
  Checkpoint checkpoint = 1;
}

message Checkpoint {
  string id = 1;
  int64  size = 2;
  bytes  root_hash = 3;
  string anchored_at = 4;
  string kid = 5;
  string signature_token = 6;
}

message GetServerPublicKeyRequest {
  string kid = 1;
}

message GetServerPublicKeyResponse {
  string kid = 1;
  bytes  public_key = 2;
}
